# SemTerm

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  bandit.yaml  cloudbuild.yml  docker-compose.yml  k8s-deployment.yaml  main.py  pyproject.toml  pytest.ini  redis.conf  requirements.txt  setup.py  tox.ini  version_increment.py
.github/workflows/: python-app.yml  python-package.yml
background_workers/: celery_worker.py  celeryconfig.py
conf/: supervisord.conf
database/: connection_pool.py
logs/: LogConfig.py
models/: Response.py  Summary.py
pipelines/: CaseSummaryPipeline.py
preprocessing/: IdentityHandler.py  PersonAnnotator.py  TokenHandler.py
routers/: background_tasks_router.py  case_summary_router.py  meta.py
semterm/: TerminalAgent.py  TerminalAgentPrompt.py  main.py  utils.py
semterm/UI/: UserInterface.py
semterm/agent/: MrklAgent.py  SemanticTerminalAgent.py  TerminalAgent.py  TerminalAgentExecutor.py  TerminalAgentPrompt.py
semterm/config/: Config.py  config.ini
semterm/langchain_extensions/: schema.py  tools.py
semterm/terminal/: ProcessManagerTool.py  SemanticTerminalManager.py  SemanticTerminalProcess.py  TerminalOutputParser.py  TerminalTool.py
settings/: Settings.py  deduce-config.json
tests/: conftest.py  global_setup.py  global_teardown.py  test_main.py
tests/UI/: test_UserInterface.py
tests/agent/: test_MrklAgent.py  test_SemanticTerminalAgent.py  test_TerminalAgent.py  test_TerminalAgentPrompt.py
tests/api/: test_case_summary.py  test_meta.py
tests/config/: test_Config.py
tests/terminal/: test_SemanticTerminalManager.py  test_SemanticTerminalProcess.py  test_TerminalAgentExecutor.py  test_TerminalOutputParser.py  test_TerminalTool.py
tests/tools/: test_tools.py
tests/unit/: test_CaseSummaryPipeline.py  test_IdentityHandler.py  test_SummaryChainFactory.py  test_TokenHandler.py  (+1 more)
(+5 files in other folders)
