[tool.poetry]
name = "generative-summarizer"
version = "1.0.0"
description = ""
authors = ["alambrou <alexander.lambrou@ovationcxm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.99.1"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
langchain = "^0.0.220"
faker = "^18.11.2"
deduce = "^2.0.3"
docdeid = "^0.1.6"
motor = "^3.2.0"
gunicorn = "^20.1.0"
tiktoken = "^0.4.0"
hypothesis = "^6.80.0"
pytest = "^7.4.0"
mongomock = "^4.1.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
asgi-lifespan = "^2.1.0"
redis = "^4.6.0"
pytest-celery = "^0.0.0"
celery = "^5.3.1"
asgiref = "^3.7.2"
pymongo = "^4.4.0"
supervisor = "^4.2.5"
openai = "^0.27.8"
flake8 = "^6.0.0"
bandit = {extras = ["toml"], version = "^1.7.5"}
google-cloud-artifact-registry = "^1.8.2"
toml = "^0.10.2"
packaging = "^23.1"
trafilatura = "^1.6.1"
graphsignal = "^0.13.43"
black = "^23.7.0"
autoflake = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
